--- a/tmux.conf
+++ b/tmux.conf
@@ -53,3 +53,6 @@ set-option -g status-bg colour235 #base02                                       
 set-option -g status-fg yellow #yellow                                                                                                             │
 set-option -g status-attr dim                                                                                                                      │
 #set status-style bg=blue 
+
+# Reload the config                                                                                                                   | 169 kB  00:00:00     
+bind r source-file ~/.tmux/.tmux.conf
