--- a/tmux.conf
+++ b/tmux.conf
@@ -1,58 +1,63 @@
-# Load the new config by giving·                                                                                                                   │ting lab $ 
-# tmux source-file ~/.tmux/.tmux.conf                                                                                                              │o openvpn --config RedHatVPN-Kumar-allinone.ovpn 
-                                                                                                                                                   │Fri Apr  8 08:39:51 2016 OpenVPN 2.3.10 x86_64-redhat-linux-gnu
-# Copy using TMUX                                                                                                                                  │ [SSL (OpenSSL)] [LZO] [EPOLL] [PKCS11] [MH] [IPv6] built on Ja
-# Prefix which is CTRL B + z to maximise and then same again to minimise                                                                           │n  4 2016
-                                                                                                                                                   │Fri Apr  8 08:39:51 2016 library versions: OpenSSL 1.0.2g-fips 
-# Split·                                                                                                                                           │ 1 Mar 2016, LZO 2.08
-bind-key '-' split-window -v                                                                                                                       │Fri Apr  8 08:39:51 2016 Control Channel Authentication: tls-au
-bind-key '\' split-window -h                                                                                                                       │th using INLINE static key file
-                                                                                                                                                   │Fri Apr  8 08:39:51 2016 UDPv4 link local (bound): [undef]
-# Mouse                                                                                                                                            │Fri Apr  8 08:39:51 2016 UDPv4 link remote: [AF_INET]124.171.65
-set mouse on                                                                                                                                       │.50:80
-set mouse-utf8 on                                                                                                                                  │Fri Apr  8 08:39:51 2016 [RedHatVPN-Server] Peer Connection Ini
-                                                                                                                                                   │tiated with [AF_INET]124.171.65.50:80
-# Mouse Copy                                                                                                                                       │Fri Apr  8 08:39:54 2016 TUN/TAP device tun0 opened
-# bind -n WheelUpPane copy-mode                                                                                                                    │Fri Apr  8 08:39:54 2016 do_ifconfig, tt->ipv6=0, tt->did_ifcon
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"                        │fig_ipv6_setup=0
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"                                      │Fri Apr  8 08:39:54 2016 /usr/sbin/ip link set dev tun0 up mtu 
-                                                                                                                                                   │1500
-# Though the above will only scroll one line at a time, add this solution to scroll an entire page instead                                         │Fri Apr  8 08:39:54 2016 /usr/sbin/ip addr add dev tun0 local 1
-bind -t vi-copy    WheelUpPane   page-up                                                                                                           │0.0.12.14 peer 10.0.12.13
-bind -t vi-copy    WheelDownPane page-down                                                                                                         │Fri Apr  8 08:39:54 2016 Initialization Sequence Completed
-bind -t emacs-copy WheelUpPane   page-up                                                                                                           │
-bind -t emacs-copy WheelDownPane page-down                                                                                                         │
-                                                                                                                                                   │
-# History                                                                                                                                          │
-set history-limit 30000                                                                                                                            │
-                                                                                                                                                   │
-# Clock                                                                                                                                            │
-set clock-mode-style 12                                                                                                                            │
-                                                                                                                                                   ├───────────────────────────────────────────────────────────────
-# use vim keybindings in copy mode                                                                                                                 │heelUpPane   page-up   bind -t vi-copy    W 
-# setw -g mode-keys vi                                                                                                                             │-bash: bind: -t: invalid option
-                                                                                                                                                   │bind: usage: bind [-lpsvPSVX] [-m keymap] [-f filename] [-q nam
-# set pane colors - hilight the active pane                                                                                                        │e] [-u name] [-r keyseq] [-x keyseq:shell-command] [keyseq:read
-set-option -g pane-border-fg colour235 #base02                                                                                                     │line-function or readline-command]
-set-option -g pane-active-border-fg colour33 #blue                                                                                                 │heelDownPane page-down bind -t vi-copy    W 
-                                                                                                                                                   │-bash: bind: -t: invalid option
-                                                                                                                                                   │bind: usage: bind [-lpsvPSVX] [-m keymap] [-f filename] [-q nam
-# Status                                                                                                                                           │e] [-u name] [-r keyseq] [-x keyseq:shell-command] [keyseq:read
-set status on                                                                                                                                      │line-function or readline-command]
-set status-utf8 on                                                                                                                                 │heelUpPane   page-up   bind -t emacs-copy W 
-set status-interval 5                                                                                                                              │-bash: bind: -t: invalid option
-set status-justify centre                                                                                                                          │bind: usage: bind [-lpsvPSVX] [-m keymap] [-f filename] [-q nam
-set set-titles on                                                                                                                                  │e] [-u name] [-r keyseq] [-x keyseq:shell-command] [keyseq:read
-                                                                                                                                                   │line-function or readline-command]
-# Terminal emulator settings                                                                                                                       │heelDownPane page-down^Cind -t emacs-copy W 
-set terminal-overrides 'xterm*:smcup@:rmcup@'                                                                                                      │kjadav@sputnik1 ~ $ 
-set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'                                                                                 │
-                                                                                                                                                   │
-# Set color for status bar                                                                                                                         │
-set-option -g status-bg colour235 #base02                                                                                                          │
-set-option -g status-fg yellow #yellow                                                                                                             │
-set-option -g status-attr dim                                                                                                                      │
-#set status-style bg=blue 
+# Load the new config by giving 
+# tmux source-file ~/.tmux/.tmux.conf
 
-# Reload the config                                                                                                                   | 169 kB  00:00:00     
+# Copy using TMUX
+# Prefix which is CTRL B + z to maximise and then same again to minimise
+
+# Split 
+bind-key '-' split-window -v
+bind-key '\' split-window -h
+
+# Mouse
+set mouse on
+set mouse-utf8 on
+
+# Mouse Copy
+# bind -n WheelUpPane copy-mode
+bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+# Though the above will only scroll one line at a time, add this solution to scroll an entire page instead
+bind -t vi-copy    WheelUpPane   page-up
+bind -t vi-copy    WheelDownPane page-down
+bind -t emacs-copy WheelUpPane   page-up
+bind -t emacs-copy WheelDownPane page-down
+
+# History
+set history-limit 30000
+
+# Clock
+set clock-mode-style 12
+
+# use vim keybindings in copy mode
+# setw -g mode-keys vi
+
+# set pane colors - hilight the active pane
+# set-option -g pane-border-fg colour235 #base02
+# set-option -g pane-active-border-fg colour33 #blue
+
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour235
+set -g pane-active-border-fg colour33
+
+
+# Status
+set status on
+set status-utf8 on
+set status-interval 5
+set status-justify centre
+set set-titles on
+
+# Terminal emulator settings
+set terminal-overrides 'xterm*:smcup@:rmcup@'
+set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
+
+# Set color for status bar
+set-option -g status-bg colour235 #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim
+#set status-style bg=blue
+
+# Reload the config 
 bind r source-file ~/.tmux/.tmux.conf
