--- a/tmux.conf
+++ b/tmux.conf
@@ -18,10 +18,10 @@ bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 # Though the above will only scroll one line at a time, add this solution to scroll an entire page instead
-bind -t vi-copy    WheelUpPane   page-up
-bind -t vi-copy    WheelDownPane page-down
-bind -t emacs-copy WheelUpPane   page-up
-bind -t emacs-copy WheelDownPane page-down
+bind -t vi-copy    WheelUpPane   halfpage-up
+bind -t vi-copy    WheelDownPane halfpage-down
+bind -t emacs-copy WheelUpPane   halfpage-up
+bind -t emacs-copy WheelDownPane halfpage-down
 
 # History
 set history-limit 30000
