--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ bind-key '\' split-window -h
 
 # Mouse
 set mouse on
-set mouse-utf8 on
+# set mouse-utf8 on # Not needed anymore
 
 # Mouse Copy
 # bind -n WheelUpPane copy-mode
@@ -41,10 +41,9 @@ set -g pane-border-fg colour238
 set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour33
 
-
 # Status
 set status on
-set status-utf8 on
+# set status-utf8 on # Not needed anymore.
 set status-interval 5
 set status-justify centre
 set set-titles on
@@ -54,10 +53,47 @@ set terminal-overrides 'xterm*:smcup@:rmcup@'
 set -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
 
 # Set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr dim
+#set-option -g status-bg colour235 #base02
+#set-option -g status-fg yellow #yellow
+#set-option -g status-attr dim
 #set status-style bg=blue
 
 # Reload the config 
-bind r source-file ~/.tmux/.tmux.conf
+bind r source-file ~/.tmux/.tmux.conf \; display-message "tmux.conf reloaded."
+
+
+# New status bar settings added on 15 July 2016
+set-option -g status-interval 1
+set-option -g status-left ''
+set-option -g status-right '%l:%M%p'
+set-window-option -g window-status-current-fg magenta
+set-option -g status-fg default
+set-window-option -g automatic-rename off
+
+# Status Bar solarized-dark (default)
+set-option -g status-bg black
+set-option -g pane-active-border-fg red
+set-option -g pane-border-fg blue
+
+
+# Status Bar solarized-light
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+
+# Set window notifications
+setw -g monitor-activity on
+set -g visual-activity on
+setw -g window-status-activity-bg red
+setw -g window-status-activity-fg black
+
+# Borders from @nicklamuro
+set -g pane-active-border-fg 'colour24'
+set -g pane-border-fg 'colour238'
+
+# Enable copy/paste support for Linux <-> Tmux
+# move x clipboard into tmux paste buffer
+bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+
+# # move tmux copy buffer into x clipboard
+bind C-y run "tmux save-buffer - | xclip -i"
